Pagina home e de listagem concluidas
A pagina de listagem de professores expansiva foi concluida.

--- a/web/src/assets/styles/global.css
+++ b/web/src/assets/styles/global.css
@@ -46,6 +46,7 @@ input,
 button,
 textarea {
     font: 500 1.6rem Poppins; 
+    color: var(--color-text-base);
     /* Rem - Botar uma porcentagem a mais do font-size, utilizado para criar aplicações responsivas */
 }
 
